--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -71,7 +71,7 @@
         color: $color-primary;
         display: inline-block;
         text-decoration: none;
-        border: 1px solid $color-primary;
+        border-bottom: 1px solid $color-primary;
         padding: 3px;
         transition: all .2s;
     }
