--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -1,3 +1,22 @@
+/*
+0-600px phone
+600-900 tablet portrait
+900-1200 tablet landscape
+1200-1800px normal styles
+1800px+ big desktop
+
+@mixin respond-phone {
+    @media (max-width: 600px) { @content };
+}
+
+$berakpoint arg choices:
+phone
+tab
+tab-land
+desk
+
+1em = 16px
+*/
 *,
 *::after,
 *::before {
@@ -7,6 +26,15 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
