--- a/natours/sass/abstracts/_mixins.scss
+++ b/natours/sass/abstracts/_mixins.scss
@@ -12,3 +12,39 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+
+// MEDIA QUERY MANAGER
+/*
+0-600px phone
+600-900 tablet portrait
+900-1200 tablet landscape
+1200-1800px normal styles
+1800px+ big desktop
+
+@mixin respond-phone {
+    @media (max-width: 600px) { @content };
+}
+
+$berakpoint arg choices:
+phone
+tab
+tab-land
+desk
+
+1em = 16px
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) { @content }; //600px
+    }
+    @if $breakpoint == tab {
+        @media (max-width: 56.25em) { @content }; //900px
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width: 75em) { @content }; //1200px
+    }
+    @if $breakpoint == desk {
+        @media (min-width: 112.5em) { @content }; //1800px+
+    }
+}
