--- a/natours/sass/base/_base.scss
+++ b/natours/sass/base/_base.scss
@@ -7,7 +7,19 @@
 }
 
 html {
-    font-size: 62.5%; //1rem = 62.5%
+    font-size: 62.5%; //1rem = 62.5% = 10px
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
+    }
+
+    @include respond(tab) {
+        font-size: 50%; //1 rem = 8px, 8/16 = 50%
+    }
+    
+    @include respond(desk) {
+        font-size: 75%; //1rem = 12px, 12/16 = 75%
+    }
 }
 
 body{
