--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -4,9 +4,6 @@ body {
     /*font-size: 16px;*/
     line-height: 1.7;
     color: $color-grey-dark;
-    padding: 3rem;
-    
-    box-sizing: border-box;
 }
 
 .heading-primary{
@@ -24,6 +21,11 @@ body {
     
         animation-name: moveInLeft;
         animation-duration: 1s;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-family: 5rem;
+        }
     }
     
     &--sub {
@@ -31,9 +33,12 @@ body {
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.75rem;
-    
         animation-name: moveInRight;
         animation-duration: 1s;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 
 }
@@ -48,6 +53,14 @@ body {
     color: transparent;
     letter-spacing: 2px;
     transition: all .2s;
+
+    @include respond(tab) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
