--- a/natours/sass/layout/_grid.scss
+++ b/natours/sass/layout/_grid.scss
@@ -3,6 +3,15 @@
     margin: 0 auto;
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include respond (tab) {
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+
+    @include respond (tab) {
+        max-width: 50rem;
+        padding: 0 3rem;
     }
 
     @include clearfix;
@@ -12,6 +21,15 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+
+            @include respond (tab) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include respond (tab) {
+            width: 100% !important;
         }
     }
 
