--- a/natours/sass/components/_feature-box.scss
+++ b/natours/sass/components/_feature-box.scss
@@ -6,12 +6,22 @@
     border-radius: 3px;
     box-shadow: 0 1.5 4rem rgba($color-black, .15);
     transition: transform .3s;
+
+    @include respond(tab) {
+        padding: 2rem;
+
+    }
+
     &__icon{
         font-size: 6rem;
         margin-bottom: .5rem;
         background-image: linear-gradient(to right, $color-primary-light,$color-primary-dark);
         color: transparent;
         -webkit-background-clip: text;
+
+        @include respond(tab) {
+            margin-bottom: 0;   
+        }
     }
 
     &:hover {
