--- a/natours/sass/layout/_footer.scss
+++ b/natours/sass/layout/_footer.scss
@@ -11,6 +11,10 @@
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(tab) {
+            margin-bottom: 6rem;
+        }
     }
 
     &__logo {
