--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -6,8 +6,6 @@
     position: relative;
     height: 52rem;
 
-
-
     &__side {
         height: 52rem;
         transition: all .8s ease;
@@ -15,6 +13,7 @@
         top: 0;
         left: 0;
         width: 100%;
+        -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
         border-radius: 3px;
         overflow: hidden;
