--- a/natours/css/style.comp.css
+++ b/natours/css/style.comp.css
@@ -45,6 +45,10 @@ body {
     body {
       padding: 0; } }
 
+::selection {
+  background-color: #55c57a;
+  color: #fff; }
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
