--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -158,7 +158,9 @@
 
 
 
-    @include respond(tab) {
+    //@include respond(tab) {
+    @media only screen and (max-width: 56.25em),
+    only screen and (hover: none) {
         //functionality
         height: auto;
         border-radius: 3px;
