--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -207,14 +207,14 @@
 .overview {
 
     display: flex;
+    border-bottom: 1px solid var(--color-grey-light-2);
 
     &__heading{
 
     }
 
     &__stars {
-        margin-right: auto;
-        //flex: 1;
+        margin-right: auto; //flex: 1;  
     }
 
     &__icon-star,
