--- a/trillo/sass/_layout.scss
+++ b/trillo/sass/_layout.scss
@@ -37,14 +37,14 @@
 }
 
 .detail {
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line);
 }
 
-.description {
-    font-size: 1.4rem;
+.description { 
     background-color: white;
     box-shadow: var(--shadow-light);
     padding: 3rem;
@@ -53,7 +53,9 @@
 }
 
 .user-reviews {
-    background-color: yellowgreen;
     flex: 1;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
