--- a/trillo/sass/_components.scss
+++ b/trillo/sass/_components.scss
@@ -125,13 +125,26 @@
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
+    
+    @media only screen and (max-width: $bp-medium) {
+        display: flex;
+        margin: 0;
+    } 
 
     &__item {
         position: relative;
 
         &:not(:last-child) {
             margin-bottom: .5rem;
+
+            @media only screen and (max-width: $bp-medium) {
+                margin: 0;
+            } 
         }
+
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
+        } 
     }
 
     &__item::before{
@@ -169,6 +182,11 @@
         display: flex;
         align-items: center;
 
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center;
+            padding: 2rem;
+        } 
+
     }
 
     &__icon {
@@ -186,6 +204,10 @@
     color: var(--color-grey-light-4);
     text-align: center;
     padding: 2.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        display: none;
+    } 
 }
 
 ///////////////////////////
@@ -375,7 +397,7 @@
     }
 
     &__friends {
-
+        display: flex;
     }
 
     &__photo {
@@ -386,7 +408,7 @@
         border: 3px solid white;
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -402,6 +424,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        margin-bottom: 3rem;
+        padding: 2rem;
+    } 
 
     &__text {
         margin-bottom: 2rem;
@@ -465,6 +492,10 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    } 
 
     &__book-now {
         font-size: 2rem;
